Moved smooth scrolling logic from css to javascript. Worked fine on FireFox but not on Chrome. With javascript method no issues on either platform.

--- a/index.css
+++ b/index.css
@@ -1,9 +1,4 @@
-﻿html {
-    scroll-behavior: smooth;
-    scroll-snap-type: y mandatory;
-}
-
-section {
+﻿section {
     scroll-snap-align: start;
     height: 100vh;
 }
